# Hynobius

./: CMakeLists.txt  CMakePresets.json  README.md  mkdocs.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: development-plan-template.md  release-template.md
.github/workflows/: ci.yml  pre-release.yml
docs/engine/optimization/: 20260509_204934_summary.md  20260509_230141_summary.md  20260510_003537_summary.md  20260510_230420_summary.md
docs/engine/optimization/aspiration_window_optimization/: 20260510_171143_summary.md  20260510_185621_summary.md
engine/include/: Engine.h  Version.h
engine/include/board/: Attack.h  Board.h  Check.h  Piece.h
engine/include/command/: UCI.h  UCI_Move_Parcer.h
engine/include/debug/: perft.h  validation.h
engine/include/error/: Engine_Error.h
engine/include/fen/: FEN_Parser.h
engine/include/move/: Make_BitMove.h  Move.h  Move_Direction.h  Move_Order.h
engine/include/search/: PV_Table.h  Search.h  TT.h
engine/src/: Engine.cpp  Version.cpp  main.cpp
engine/src/board/: Attack.cpp  Board.cpp  Check.cpp
engine/src/command/: CLI.cpp  UCI.cpp  UCI_Move_Parser.cpp
engine/src/debug/: Perft.cpp
engine/src/evaluate/: Evaluate.cpp  Mobility.cpp
engine/src/fen/: FEN_Parser.cpp
engine/src/move/: Generate_Move.cpp  Move.cpp
engine/src/search/: Search.cpp  TT.cpp
tests/: checkmate.py
